--- a/portfolio.html
+++ b/portfolio.html
@@ -209,28 +209,28 @@
             <li>
               <a href="#">
                 <svg class="icon" width="20" height="20">
-                  <use href="./images/SVG/sprite-sheet.svg#instagram"></use>
+                  <use href="./images/SVG/icons.svg#instagram"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href="#">
                 <svg class="icon" width="20" height="20">
-                  <use href="./images/SVG/sprite-sheet.svg#twitter"></use>
+                  <use href="./images/SVG/icons.svg#twitter"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href="#">
                 <svg class="icon" width="20" height="20">
-                  <use href="./images/SVG/sprite-sheet.svg#facebook"></use>
+                  <use href="./images/SVG/icons.svg#facebook"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a href="#">
                 <svg class="icon" width="20" height="20">
-                  <use href="./images/SVG/sprite-sheet.svg#linkedin"></use>
+                  <use href="./images/SVG/icons.svg#linkedin"></use>
                 </svg>
               </a>
             </li>
