--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <title>WEb Studio</title>
   </head>
   <body>
-    -------------------------
     <header>
       <nav class="container navigation__container pv-main">
         <ul class="hero__navigation list p-0">
@@ -46,10 +45,11 @@
           <li class="gallery__item">
             <a
               href="mailto:info@devstudio.com"
-              class="link icon__logo link-font-style"
+              class="link icon link-font-style"
             >
-              <svg class="icon email" width="16px" height="12px">
+              <svg class="email" width="16px" height="12px">
                 <use
+                  class="logo"
                   href="./images/icons/symbol-defs.svg#icon-logo-email"
                 ></use>
               </svg>
@@ -58,16 +58,18 @@
             >
           </li>
 
-          <li>
-            <a class="link link-font-style" href="tel:+12127724150"
-              >+1 212-772-4150</a
+          <li class="gallery__item">
+            <a href="tel:+12127724150" class="link icon link-font-style">
+              <svg class="telefono" width="10px" height="16px">
+                <use
+                  class="logo"
+                  href="./images/icons/symbol-defs.svg#icon-logo-telefono"
+                ></use></svg>+1 212-772-4150</a
             >
           </li>
         </ul>
       </nav>
     </header>
-
-    ----------------------------------------
 
     <main>
       <section class="hero section">
@@ -115,9 +117,7 @@
           <li>
             <div class="contenedor__logos">
               <svg class="icon__logo__detalles">
-                <use
-                  href="./images/icons/symbol-defs.svg#icon-panel-diagrama-3"
-                ></use>
+                <use href="./images/icons/svg-2.svg#icon-diagrama"></use>
               </svg>
             </div>
             <h3>PLANNING</h3>
@@ -130,9 +130,7 @@
           <li>
             <div class="contenedor__logos">
               <svg class="icon__logo__detalles">
-                <use
-                  href="./images/icons/symbol-defs.svg#icon-panel-astronauta-4"
-                ></use>
+                <use href="./images/icons/svg-2.svg#icon-astronauta"></use>
               </svg>
             </div>
             <h3>MODERN TECHNOLOGIES</h3>
@@ -423,18 +421,6 @@
         </div>
       </section>
 
-
-
-
-
-
-
-
-
-
-
-
-      
       <section class="section">
         <div class="container">
           <h2 class="titulo__clientes">Clientes regulares</h2>
