--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
                 <use
                   class="logo"
                   href="./images/icons/symbol-defs.svg#icon-logo-telefono"
-                ></use></svg>+1 212-772-4150</a
-            >
+                ></use></svg>+1 212-772-4150</a > 
           </li>
         </ul>
       </nav>
@@ -491,7 +490,7 @@
           <h3 class="encuentranos m-0">ENCUENTRENOS EN</h3>
           <ul class="icons__list__footer list p-0">
             <li class="icons__item">
-              <a href="" class="icons__link">
+              <a href="" class="icons__link link__logo">
                 <svg class="iconos" width="20px" height="20px">
                   <use
                     href="./images/icons/symbol-defs.svg#icon-instagram"
