--- a/portfolio.html
+++ b/portfolio.html
@@ -36,16 +36,36 @@
           </li>
         </ul>
 
-        <ul class="hero__contact box_header list p-0">
-          <li>
-            <a class="link link-font-style" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
+       
+
+
+
+
+
+        <ul class="hero__contact box__header list p-0">
+          <li class="gallery__item">
+            <a
+              href="mailto:info@devstudio.com"
+              class="link icon link-font-style"
+            >
+              <svg class="email" width="16px" height="12px">
+                <use
+                  class="logo"
+                  href="./images/icons/symbol-defs.svg#icon-logo-email"
+                ></use>
+              </svg>
+
+              info@devstudio.com</a
             >
           </li>
-          <li>
-            <a class="link link-font-style" href="tel:+12127724150"
-              >+1 212-772-4150</a
-            >
+
+          <li class="gallery__item">
+            <a href="tel:+12127724150" class="link icon link-font-style">
+              <svg class="telefono" width="10px" height="16px">
+                <use
+                  class="logo"
+                  href="./images/icons/symbol-defs.svg#icon-logo-telefono"
+                ></use></svg>+1 212-772-4150</a > 
           </li>
         </ul>
       </nav>
@@ -142,14 +162,64 @@
       </section>
     </main>
 
-    <footer>
+   
+
+     <footer>
       <address class="footer container">
-        <a class="webstudio link" href="/index.html">WebStudio</a> <br />
-        <p>695 Park Ave, New York, NY 10065,</p>
-        <p>United States</p>
-        <div class="box_footer">
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          <a href="tel:+12127724150">+1 212-772-4150</a>
+        <div class="prueba">
+          <div class="text__footer p-0">
+            <a class="webstudio link" href="/index.html">WebStudio</a> <br />
+            <p>695 Park Ave, New York, NY 10065,</p>
+            <p>United States</p>
+          </div>
+
+          <div class="box_footer">
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+12127724150">+1 212-772-4150</a>
+          </div>
+        </div>
+
+        <div class="container__redes__footer">
+          <h3 class="encuentranos m-0">ENCUENTRENOS EN</h3>
+          <ul class="icons__list__footer list p-0">
+            <li class="icons__item">
+              <a href="" class="icons__link link__logo">
+                <svg class="iconos" width="20px" height="20px">
+                  <use
+                    href="./images/icons/symbol-defs.svg#icon-instagram"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="icons__item">
+              <a href="" class="icons__link">
+                <svg class="iconos" width="20px" height="20px">
+                  <use href="./images/icons/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="icons__item">
+              <a href="" class="icons__link icon__link__footer">
+                <svg class="iconos" width="20px" height="20px">
+                  <use
+                    href="./images/icons/symbol-defs.svg#icon-facebook"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="icons__item">
+              <a href="" class="icons__link">
+                <svg class="iconos" width="20px" height="20px">
+                  <use
+                    href="./images/icons/symbol-defs.svg#icon-linkedin"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </address>
     </footer>
