goit 4 se agrego transitions

--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
                 <use
                   class="logo"
                   href="./images/icons/symbol-defs.svg#icon-logo-telefono"
-                ></use></svg>+1 212-772-4150</a > 
+                ></use></svg
+              >+1 212-772-4150</a
+            >
           </li>
         </ul>
       </nav>
@@ -146,7 +148,7 @@
           <h2 class="titulos-segundarios">What we do</h2>
 
           <ul class="gallery__images list p-0">
-            <li>
+            <li class="dedicamos">
               <img
                 src="images/img.jpg"
                 alt="primer imagen"
@@ -155,8 +157,10 @@
                 top="1061"
                 left="215"
               />
+              <div class="dedicamos-text">APLICACIONES DE ESCRITORIO</div>
             </li>
-            <li>
+
+            <li class="dedicamos">
               <img
                 src="images/img (1).jpg"
                 alt="segunda imagen"
@@ -165,8 +169,10 @@
                 top="1061"
                 left="215"
               />
+              <div class="dedicamos-text">APLICACIONES MÓVILES</div>
             </li>
-            <li>
+
+            <li class="dedicamos">
               <img
                 src="images/img (2).jpg"
                 alt="tercera imagen"
@@ -175,6 +181,7 @@
                 top="1061"
                 left="215"
               />
+              <div class="dedicamos-text">SOLUCIONES DE DISEÑO</div>
             </li>
           </ul>
         </div>
@@ -475,7 +482,7 @@
       <address class="footer container">
         <div class="prueba">
           <div class="text__footer p-0">
-            <a class="webstudio link" href="/index.html">WebStudio</a> <br />
+            <a class="webstudio link" href="./index.html">WebStudio</a> <br />
             <p>695 Park Ave, New York, NY 10065,</p>
             <p>United States</p>
           </div>
