--- a/portfolio.html
+++ b/portfolio.html
@@ -168,7 +168,7 @@
       <address class="footer container">
         <div class="prueba">
           <div class="text__footer p-0">
-            <a class="webstudio link" href="/index.html">WebStudio</a> <br />
+            <a class="webstudio link" href="./index.html">WebStudio</a> <br />
             <p>695 Park Ave, New York, NY 10065,</p>
             <p>United States</p>
           </div>
